feat: Finalize UI/UX Commercial Transformation & Temporal Lab Synchronization (v1.0)
This commit completes the transition of the Z-Realism platform from a "Doctoral Research Institute" aesthetic to a "Commercial Production Studio" user experience.

Key updates across the Presentation Layer include:

- **Image Production Lab (`image-lab.html`, `lab-image.js`):**
  - Updated all UI labels, button texts, placeholder messages, and console logs to reflect commercial terminology (e.g., "SOURCE ARTWORK", "ARTWORK DNA PROFILE", "INITIATE PRODUCTION", "MATERIAL REALISM").
  - Adjusted default values for key parameters (Resolution Anchor to 640px, CFG Scale to 6.0, Canny Thresholds to [40, 120]) to align with optimized production settings determined during research.

- **Temporal Motion Lab (`video-lab.html`, `lab-video.js`):**
  - Synchronized all UI labels, button texts, placeholder messages, and console logs with the commercial terminology established across the platform (e.g., "UPLOAD SOURCE STILL", "MOTION INTENSITY", "INITIATE MOTION PRODUCTION").
  - Updated default FPS to 12 for smoother playback in video output.
  - Corrected `resetWorkspace` logic in `lab-video.js` to ensure the dynamic content viewport is properly cleared, preventing display artifacts from previous generations.
  - Implemented the "Temporal Telemetry HUD" to display `TOTAL_FRAMES`, `TARGET_FPS`, and `PROD_TIME` for real-time production monitoring.

- **Global Navigation (`nav.js`) & Footer (`footer.js`):**
  - Updated all navigation links and footer sections to use commercial terminology (e.g., "Image Production", "Video Production", "About Us", "Technology", "Contact Us", "Legal & Privacy").
  - Refined footer branding and status messages for a professional commercial presence.

- **Cookie Consent (`cookie-consent.js`):**
  - Adapted the "Neural Cache Protocol" to standard "Essential Cookies" terminology, enhancing user understanding and compliance for a commercial service.

This comprehensive UI/

--- a/src/presentation/about.html
+++ b/src/presentation/about.html
@@ -2,25 +2,24 @@
 <html lang="en">
 <!-- 
   path: src/presentation/about.html
-  description: Research Mission & Technical Thesis Page v21.2.
+  description: Company Mission & Product Vision Page v1.0 - Commercial Product.
   
   ABSTRACT:
-  This document outlines the scientific goals of the Z-Realism project, 
-  focusing on the methodology used to bridge the gap between stylized 
-  2D manifolds and high-fidelity photorealistic environments. 
-  Version 21.2 introduces metric cards and progress telemetry visualization.
+  This document outlines the core mission of Z-Realism as a production studio, 
+  focusing on the methodology used to bridge the gap between 2D artistic concepts 
+  and high-fidelity photorealistic environments for creative industries.
   
   ARCHITECTURAL ROLE (Presentation Layer):
-  Acts as the primary documentation for the research thesis. Provides 
-  context for the technical implementations found in the laboratories 
-  and displays experimental metrics visually.
+  Acts as the primary communication channel for Z-Realism's value proposition. 
+  Provides context for the production pipelines and highlights the benefits 
+  of using our advanced synthesis technology.
 
   author: Enrique González Gutiérrez <enrique.gonzalez.gutierrez@gmail.com>
 -->
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ABOUT | Z-Realism Research Institute</title>
+    <title>ABOUT US | Z-Realism Studio</title>
 
     <!-- FAVICON CONFIGURATION -->
     <link rel="icon" type="image/x-icon" href="favicon.ico">
@@ -33,159 +32,103 @@
     <!-- Persistent Ambient Cyber-Grid -->
     <div class="grid-overlay"></div>
 
-    <!-- Main Research Container -->
+    <!-- Main Content Container -->
     <main class="info-container container">
         
-        <a href="index.html" class="back-link">&larr; BACK TO GATEWAY</a>
+        <a href="index.html" class="back-link">&larr; BACK TO HOME</a>
 
-        <!-- Thesis Header: Core Scientific Objective -->
+        <!-- Company Header: Core Vision -->
         <header class="info-section">
-            <span class="info-subtitle">RESEARCH MISSION</span>
-            <h1 class="info-title">Bridging Latent Dimensions</h1>
+            <span class="info-subtitle">OUR MISSION</span>
+            <h1 class="info-title">Transforming Art Into Reality</h1>
             <div class="info-content">
                 <p>
-                    Z-Realism AI is a professional-grade research ecosystem engineered for the 
-                    photorealistic synthesis of 2D character manifolds into coherent, high-fidelity 
-                    visual representations. The platform explores the intersection between 
-                    generative diffusion models, perceptual continuity, and structural identity 
-                    preservation across stochastic transformations.
+                    Z-Realism is a professional-grade production studio engineered to transform 
+                    your 2D character designs, concepts, and illustrations into coherent, high-fidelity 
+                    photorealistic visuals. Our platform is at the forefront of generative AI, 
+                    exploring the intersection between advanced diffusion models and artistic intent.
                 </p>
                 <p>
-                    Our primary scientific objective is to solve the <strong>Structural and Chromatic Drift Problems</strong>—a 
-                    prevalent challenge in neural style transfer and image-to-image diffusion systems. 
-                    These issues arise when the geometric identity, anatomical coherence, or color 
-                    integrity of the source subject is progressively degraded during high-entropy 
-                    denoising pipelines. Z-Realism introduces controlled intervention layers designed 
-                    to stabilize these variables throughout the generative process.
+                    We specialize in solving the <strong>"Stylization-to-Realism Gap"</strong>—a 
+                    common challenge where artistic designs lose their unique identity, anatomical 
+                    coherence, or original color palette when translated into photorealistic forms. 
+                    Z-Realism introduces precise control mechanisms designed to preserve these 
+                    critical elements throughout the generative process.
                 </p>
             </div>
         </header>
 
-        <!-- Technical Content Section -->
+        <!-- Product & Technology Section -->
         <section class="info-section info-content">
-            <h2>The Scientific Thesis</h2>
+            <h2>Our Technology</h2>
             <p>
-                The core thesis of Z-Realism is that photorealism is not a function of raw model 
-                capacity, but of constraint precision. Our methodology relies on the surgical 
-                control of the stochastic denoising process, treating diffusion not as a black box, 
-                but as a sequence of interpretable and steerable transformations.
+                Our core technology is built on the principle that photorealism is achieved not 
+                through brute-force model power, but through intelligent, precise control. Our methodology 
+                relies on surgically guiding the generative AI, treating the diffusion process not 
+                as a black box, but as a steerable tool for creative professionals.
             </p>
             <p>
-                By utilizing hierarchical conditioning via <strong>Dual ControlNet 
-                (Depth + OpenPose)</strong>, the system anchors the underlying spatial geometry 
-                and skeletal intent of the subject before injecting high-resolution cinematic 
-                textures. This layered conditioning strategy ensures that structural priors are 
-                resolved early in the diffusion timeline, dramatically reducing deformation artifacts.
+                By utilizing advanced conditioning layers via <strong>Dual ControlNet 
+                (Depth + Canny Edge)</strong>, our system anchors the foundational geometry 
+                and structural intent of your design before seamlessly injecting high-resolution, 
+                cinematic textures. This layered approach ensures that your original artwork's 
+                structure is maintained, dramatically reducing distortion artifacts.
             </p>
             <p>
-                This approach allows for the generation of photorealistic results without sacrificing 
-                the core essence of the original <strong>Subject DNA</strong>, a term used to describe 
-                the invariant visual traits that define identity across style, resolution, and context.
+                This allows us to generate stunning photorealistic results without sacrificing 
+                the core essence of your <strong>Original Artwork's DNA</strong>—the unique visual 
+                traits that define your creation across style, resolution, and context.
             </p>
 
             <div class="info-card">
-                <h4>Core Research Pillars:</h4>
+                <h4>Key Product Advantages:</h4>
                 <ul class="info-list">
                     <li>
-                        <strong>Original Fidelity Protocol:</strong> A hybrid prompt-anchoring logic 
-                        combined with latent-space weighting strategies that actively mitigate 
-                        chromatic saturation loss, facial drift, and identity collapse during 
-                        aggressive style amplification.
+                        <strong>Identity Preservation:</strong> Our unique hybrid anchoring logic 
+                        actively mitigates chromatic drift, facial distortion, and identity loss, 
+                        ensuring your characters remain instantly recognizable.
                     </li>
                     <li>
-                        <strong>Temporal Consistency:</strong> Stable Video Diffusion protocols 
-                        adapted and re-sequenced for high-resolution output, enabling frame-to-frame 
-                        coherence on limited consumer hardware without relying on external interpolation.
+                        <strong>Temporal Motion Synthesis:</strong> Convert your static photorealistic 
+                        stills into fluid cinematic video sequences. We offer frame-to-frame coherence 
+                        optimized for diverse hardware, making advanced animation accessible.
                     </li>
                     <li>
-                        <strong>Heuristic Metadata:</strong> An intelligence layer that extracts, 
-                        classifies, and sequences visual DNA into optimal latent parameters, 
-                        allowing reproducible results across sessions and controlled variation 
-                        without loss of identity.
+                        <strong>Asset Intelligence:</strong> An advanced system that extracts, 
+                        classifies, and sequences the visual DNA of your artwork into optimal 
+                        generation parameters, ensuring reproducible and consistent results.
+                    </li>
+                    <li>
+                        <strong>Hardware Efficiency:</strong> Our technology is optimized for 
+                        performance on accessible hardware, offering high-quality output without 
+                        the need for expensive enterprise-grade GPUs.
                     </li>
                 </ul>
             </div>
 
-            <h2>Hardware Orchestration</h2>
+            <h2>Our Team & Vision</h2>
             <p>
-                A critical contribution of this project is the optimization of high-latency 
-                neural workloads for consumer-grade hardware environments. Rather than assuming 
-                access to enterprise GPUs, Z-Realism is explicitly designed to operate under 
-                constrained VRAM conditions while maintaining research-grade output quality.
+                Z-Realism is founded by 
+                <strong>Enrique González Gutiérrez</strong>, a leading expert in 
+                Informatics Engineering and Applied Machine Learning. Our vision is to 
+                democratize access to cutting-edge generative AI, empowering artists, 
+                designers, and creative studios to accelerate their visual development workflows.
             </p>
             <p>
-                The <strong>Z-Realism v21.1 Engine</strong> implements an aggressive VRAM resource 
-                manager and <strong>Sequential CPU-VRAM Offloading</strong> architecture. This 
-                system dynamically streams latent tensors between GPU memory and system RAM, 
-                effectively transforming conventional memory limitations into a scalable 
-                compute pipeline.
-            </p>
-            <p>
-                As a result, the engine enables the synthesis of 1024px video frames on 
-                NVIDIA GPUs with only 6GB of VRAM, utilizing system RAM as a massive latent buffer 
-                without compromising numerical stability or output fidelity.
+                We are committed to building robust, modular, and ethically-driven AI tools. 
+                Our platform is architected under principles of <strong>reliability and scalability</strong>, 
+                designed to evolve with the needs of the creative industry while preserving 
+                the integrity of artistic intent.
             </p>
 
-            <h2>Authorship & Clean Code</h2>
-            <p>
-                The Z-Realism project is conceptualized and developed by 
-                <strong>Enrique González Gutiérrez</strong> as part of a doctoral thesis in 
-                Informatics Engineering. The research is positioned at the convergence of 
-                software architecture, applied machine learning, and computational aesthetics.
-            </p>
-            <p>
-                The entire ecosystem is architected under <strong>SOLID principles</strong> and 
-                <strong>Domain-Driven Design (DDD)</strong>, ensuring that the neural engine remains 
-                modular, testable, and resilient to technological shifts in the generative AI 
-                landscape. This architectural rigor allows experimental components to evolve 
-                independently while preserving the integrity of the core system.
-            </p>
+            <!-- --- The "Metric Cards" section is removed from a commercial 'About Us' page --- -->
+            <!-- --- The "Ethical Diagram" is moved to a dedicated 'Legal / Ethics' page or integrated subtly --- -->
 
-            <!-- --- METRIC CARDS EXAMPLE --- -->
-            <div class="info-section">
-                <h2>Experimental Metrics</h2>
-                <div class="metric-card">
-                    <h5>Structural Fidelity</h5>
-                    <p>Measurement of geometric identity preservation during diffusion.</p>
-                    <div class="progress-bar-container">
-                        <div class="progress-bar-fill" style="--bar-value: 92%; width:92%;"></div>
-                    </div>
-                </div>
-
-                <div class="metric-card">
-                    <h5>Chromatic Stability</h5>
-                    <p>Color saturation and consistency over high-entropy transformations.</p>
-                    <div class="progress-bar-container">
-                        <div class="progress-bar-fill" style="--bar-value: 87%; width:87%;"></div>
-                    </div>
-                </div>
-
-                <div class="metric-card">
-                    <h5>Identity Preservation</h5>
-                    <p>Retention of subject DNA across all inference cycles.</p>
-                    <div class="progress-bar-container">
-                        <div class="progress-bar-fill" style="--bar-value: 94%; width:94%;"></div>
-                    </div>
-                </div>
-            </div>
-
-            <!-- --- ETHICAL DIAGRAM IMPROVED --- -->
-            <div class="info-section ethical-diagram">
-                <h2>Research Ethics & Core Principles</h2>
-                <div class="ethical-circles">
-                    <div class="circle-item">
-                        <div class="circle-label">Integrity</div>
-                        <p class="circle-desc">Ensuring all transformations respect the subject's visual DNA without introducing artificial artifacts.</p>
-                    </div>
-                    <div class="circle-item">
-                        <div class="circle-label">Transparency</div>
-                        <p class="circle-desc">All processes, models, and parameters are fully documented and reproducible for peer review.</p>
-                    </div>
-                    <div class="circle-item">
-                        <div class="circle-label">Reproducibility</div>
-                        <p class="circle-desc">Every result can be reliably reproduced using the same latent input and control layers.</p>
-                    </div>
-                </div>
+            <!-- Consider adding a "Call to Action" here -->
+            <div class="hero-actions" style="margin-top: 60px;">
+                <a href="contact.html" class="btn btn-primary">
+                    CONTACT US FOR A DEMO
+                </a>
             </div>
 
         </section>
