--- a/src/presentation/index.html
+++ b/src/presentation/index.html
@@ -2,31 +2,30 @@
 <html lang="en">
 <!-- 
   path: src/presentation/index.html
-  description: System Gateway / Landing Page v21.1 - Thesis Candidate.
+  description: Commercial Gateway / Landing Page v1.0 - Product Launch Candidate.
   
   ABSTRACT:
-  The cinematic entry point to the Z-Realism Research Institute. This module 
-  serves as the primary router, directing researchers to either the Static 
-  Fusion (Img2Img) or Temporal Fusion (Video) laboratories.
+  The cinematic entry point to the Z-Realism Production Studio. This module 
+  serves as the primary router, directing clients to either the Static 
+  Synthesis (Image) or Temporal Motion (Video) production pipelines.
   
   ARCHITECTURAL ROLE (Presentation Layer):
-  Acts as the high-level orchestrator for the laboratory modules. It utilizes 
+  Acts as the high-level orchestrator for the production modules. It utilizes 
   modular component injection (Nav/Footer) to ensure architectural consistency 
-  across the entire research ecosystem.
+  across the entire commercial ecosystem.
 
-  RESEARCH CONTEXT:
-  This landing environment is not merely a visual interface, but a conceptual 
-  gateway into a structured experimentation framework focused on neural image 
-  synthesis, controlled realism projection, and identity-preserving transformation 
-  protocols. It represents the formal threshold between artistic abstraction and 
-  computationally grounded photorealistic reconstruction.
+  COMMERCIAL CONTEXT:
+  This landing environment is a conceptual gateway into a streamlined production
+  framework focused on transforming 2D artistic concepts into photorealistic,
+  cinematic-grade imagery and motion sequences. It represents the formal bridge
+  between artistic vision and computational materialization for creative professionals.
 
   author: Enrique González Gutiérrez <enrique.gonzalez.gutierrez@gmail.com>
 -->
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Z-REALISM | Research Institute</title>
+    <title>Z-REALISM | Production Studio</title>
 
     <!-- FAVICON CONFIGURATION -->
     <link rel="icon" type="image/x-icon" href="favicon.ico">
@@ -45,150 +44,142 @@
     injected at the top of the document flow.
     -->
 
-    <!-- Hero Section: Neural Impact Area -->
+    <!-- Hero Section: Creative Impact Area -->
     <header class="hero-section">
         <div class="hero-content">
-            <span class="hero-tag">V21.1 NEURAL RESEARCH MODULE</span>
-            <h1 class="hero-title">FROM INK<br>TO LIFE</h1>
+            <span class="hero-tag">V1.0 NEURAL PRODUCTION SUITE</span>
+            <h1 class="hero-title">BRING YOUR ART<br>TO LIFE</h1>
             <p class="hero-desc">
-                Z-Realism is an advanced research platform dedicated to the 
-                photorealistic synthesis of characters from 2D source manifolds. 
-                The institute explores how latent diffusion, structural priors, 
-                and perceptual constraints can be orchestrated to transform 
-                stylized representations into cinematic, high-fidelity realism.
+                Z-Realism is an advanced production platform dedicated to the 
+                photorealistic synthesis of characters and concepts from your 
+                2D source artwork. We empower artists and designers to transform 
+                stylized representations into cinematic, high-fidelity realism 
+                with unprecedented efficiency.
             </p>
             <p class="hero-desc">
-                By leveraging state-of-the-art Latent Diffusion pipelines and 
-                rigorously controlled Temporal Consistency protocols, the system 
-                translates <strong>Subject DNA</strong>—the invariant visual identity 
-                encoded in the source—into coherent still imagery and motion-aware 
-                sequences suitable for research, prototyping, and visual analysis.
+                Leveraging state-of-the-art Latent Diffusion pipelines and 
+                rigorously controlled identity preservation protocols, our system 
+                translates your <strong>Original Artwork's DNA</strong>—the invariant 
+                visual identity encoded in your source designs—into stunning still 
+                imagery and dynamic motion sequences suitable for prototyping, 
+                marketing, and high-end visual development.
             </p>
             <p class="hero-desc">
-                The platform operates under a modular experimentation philosophy, 
-                where each synthesis stage is isolated, measurable, and reproducible. 
-                Every output is treated as a data point within a broader continuum 
-                of realism projection studies, allowing iterative refinement of 
-                perceptual fidelity, lighting simulation accuracy, and anatomical 
-                plausibility metrics.
+                Our platform operates under a flexible, artist-centric philosophy, 
+                where every synthesis stage is streamlined, measurable, and 
+                reproducible. Every output is a step closer to realizing your 
+                creative vision, allowing iterative refinement of material response, 
+                lighting simulation accuracy, and anatomical plausibility.
             </p>
             <p class="hero-desc">
-                Z-Realism does not aim to replace artistic intent; rather, it 
-                augments it by introducing computational rigor into the transition 
+                Z-Realism doesn't aim to replace artistic intent; rather, it 
+                augments it by introducing computational power into the transition 
                 from symbolic illustration to physically plausible representation. 
-                The result is a controlled bridge between imagination and neural 
-                materialization.
+                The result is a controlled bridge between your imagination and 
+                neural materialization of your intellectual property.
             </p>
             <div class="hero-actions">
                 <a href="image-lab.html" class="btn btn-primary">
-                    ENTER STATIC LAB
+                    IMAGE PRODUCTION
                 </a>
                 <a href="video-lab.html" class="btn btn-primary" style="background: var(--accent-video); box-shadow: 0 4px 15px rgba(16, 185, 129, 0.3);">
-                    ENTER TEMPORAL LAB
+                    VIDEO PRODUCTION
                 </a>
             </div>
         </div>
     </header>
 
-    <!-- Research Modules: Functional Gateways -->
+    <!-- Production Modules: Functional Gateways -->
     <main class="modules-container">
         <div class="modules-grid">
             
-            <!-- Module 1: Static Fusion (Img2Img) -->
+            <!-- Module 1: Static Synthesis (Image) -->
             <a href="image-lab.html" class="module-card">
                 <div class="module-icon">🖼️</div>
-                <h3>Static Fusion</h3>
+                <h3>Static Synthesis</h3>
                 <p>
-                    The Static Fusion laboratory focuses on the synthesis of ultra 
-                    high-resolution photorealistic stills from 2D character manifolds. 
-                    It employs strict structural conditioning, depth-aware guidance, 
-                    and chromatic stabilization techniques to preserve identity, 
-                    anatomical coherence, and color fidelity during high-entropy 
-                    denoising processes.
+                    Transform your 2D character designs, product concepts, 
+                    or architectural visualizations into ultra high-resolution 
+                    photorealistic stills. Our Image Production pipeline employs 
+                    structural conditioning and advanced material rendering to 
+                    preserve identity and color fidelity.
                 </p>
                 <p>
-                    This module serves as the foundational stage of the research 
-                    pipeline, producing identity-stable frames suitable for 
-                    evaluation, dataset generation, or subsequent temporal extension.
+                    This module accelerates your visual development, producing 
+                    ready-to-use imagery for presentations, marketing, or as 
+                    foundational assets for further animation.
                 </p>
                 <p>
-                    Advanced prompt stratification and negative-conditioning 
-                    matrices are applied to minimize semantic drift and mitigate 
-                    latent hallucination artifacts. Cross-attention mapping is 
-                    monitored to ensure that facial topology, proportional ratios, 
-                    and texture distribution remain consistent with the extracted 
-                    Subject DNA signature.
+                    Leverage advanced prompt controls to minimize semantic 
+                    deviation and ensure your original artwork's essence is 
+                    maintained throughout the photorealism translation.
                 </p>
                 <p>
-                    The laboratory is optimized for controlled experimentation, 
-                    enabling researchers to compare sampling schedulers, CFG 
-                    scaling strategies, and structural guidance weights in a 
-                    reproducible and quantifiable manner.
+                    Optimized for rapid iteration, allowing artists to explore 
+                    a wide range of stylistic outputs and lighting environments 
+                    for their proprietary designs.
                 </p>
-                <div class="module-link">LAUNCH STATIC MODULE &rarr;</div>
+                <div class="module-link">LAUNCH IMAGE PRODUCTION &rarr;</div>
             </a>
 
-            <!-- Module 2: Temporal Fusion (Img2Video) -->
+            <!-- Module 2: Temporal Motion (Video) -->
             <a href="video-lab.html" class="module-card temporal">
                 <div class="module-icon" style="filter: drop-shadow(0 0 15px var(--accent-video));">🎥</div>
-                <h3>Temporal Fusion</h3>
+                <h3>Temporal Motion</h3>
                 <p>
-                    The Temporal Fusion laboratory extends static neural outputs 
-                    into time-coherent cinematic sequences. It implements the 
-                    AnimateDiff temporal engine augmented with frame-to-frame 
-                    stabilization heuristics and motion-aware latent anchoring.
+                    Animate your static photorealistic outputs into time-coherent 
+                    cinematic video sequences. Our Temporal Motion pipeline 
+                    integrates advanced motion models with frame-to-frame 
+                    stabilization, bringing your characters to life.
                 </p>
                 <p>
-                    Sequential weight offloading and aggressive VRAM management 
-                    enable high-resolution video synthesis on local, consumer-grade 
-                    hardware, making temporal experimentation accessible without 
-                    reliance on cloud-based compute clusters.
+                    High-efficiency processing enables high-resolution video 
+                    synthesis on accessible hardware, making advanced animation 
+                    prototyping a reality for independent creators and studios 
+                    without expensive render farms.
                 </p>
                 <p>
-                    Motion vectors are constrained through adaptive noise injection 
-                    and latent anchoring checkpoints, ensuring that identity features 
-                    remain stable across micro-expressions, camera shifts, and 
-                    simulated environmental lighting changes.
+                    Maintain consistent character identity, facial expressions, 
+                    and costume details across dynamic movements, ensuring 
+                    your original designs retain their unique visual signature 
+                    in every frame.
                 </p>
                 <p>
-                    Temporal entropy is continuously evaluated to reduce flicker, 
-                    geometry distortion, and chromatic instability. The result is 
-                    a coherent, cinematic-grade output sequence that preserves 
-                    both narrative continuity and biometric consistency.
+                    Continuously evaluated for flicker reduction, geometry 
+                    stability, and chromatic accuracy, delivering broadcast-quality 
+                    motion sequences for your creative projects.
                 </p>
-                <div class="module-link">LAUNCH TEMPORAL MODULE &rarr;</div>
+                <div class="module-link">LAUNCH VIDEO PRODUCTION &rarr;</div>
             </a>
 
-            <!-- Module 3: Metadata Intelligence (DNA Analysis) -->
+            <!-- Module 3: Asset Intelligence (DNA Analysis) -->
             <div class="module-card">
                 <div class="module-icon">🧬</div>
-                <h3>Metadata Analysis</h3>
+                <h3>Asset Intelligence</h3>
                 <p>
-                    The Metadata Analysis subsystem performs heuristic feature 
-                    extraction on source manifolds and intermediate outputs. 
-                    It identifies invariant visual traits, structural landmarks, 
-                    and chromatic signatures that collectively define the 
-                    subject’s visual DNA.
+                    Our Asset Intelligence engine performs advanced feature 
+                    extraction on your source artwork. It identifies invariant 
+                    visual traits, structural landmarks, and chromatic signatures 
+                    that collectively define your original design's DNA.
                 </p>
                 <p>
-                    This intelligence layer sequences the extracted metadata into 
-                    optimized stochastic parameters for the diffusion loop, enabling 
-                    reproducibility, controlled variation, and identity preservation 
-                    across both static and temporal synthesis stages.
+                    This intelligent layer sequences the extracted metadata 
+                    into optimized generation parameters, enabling precise 
+                    reproducibility and identity preservation across all 
+                    synthesis stages.
                 </p>
                 <p>
                     By correlating pixel-space observations with latent-space 
-                    embeddings, the subsystem constructs a structured identity 
-                    profile that can be re-injected into subsequent generations 
-                    as a stabilization prior.
+                    embeddings, we construct a structured identity profile that 
+                    can be re-injected into subsequent generations as a 
+                    stabilization prior for your unique intellectual property.
                 </p>
                 <p>
-                    Over time, this metadata-driven architecture enables the 
-                    creation of reusable identity templates, facilitating 
-                    longitudinal experimentation and comparative realism studies 
-                    across multiple synthesis cycles.
+                    This metadata-driven architecture facilitates the creation 
+                    of reusable asset templates, accelerating your workflow and 
+                    ensuring brand consistency across diverse creative outputs.
                 </p>
-                <div class="module-link" style="color: var(--text-muted);">SYSTEM INTEGRATED</div>
+                <div class="module-link" style="color: var(--text-muted);">INTEGRATED SERVICE</div>
             </div>
 
         </div>
@@ -196,7 +187,6 @@
 
     <!-- 
       SHARED ARCHITECTURAL COMPONENTS 
-      Injected at the end of the body to ensure DOM availability.
     -->
     <script src="js/nav.js"></script>
     <script src="js/footer.js"></script>
